   when adding an existing subkey to another key.  [T6137]

 * cpp: Allow setting the curve to use when generating ECC keys
   for smart cards.  [T4429]

 * qt: Extend ListAllKeysJob to allow disabling the automatic trust database
   check when listing all keys.  [T6261]

 * qt: Allow deferred start of import jobs.  [T6323]

 * qt: Support creating signed and encrypted archives.  [T6342]

 * Interface changes relative to the 1.18.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gpgme_get_ctx_flag                EXTENDED: New flag 'no-auto-check-trustdb'.
 gpgme_set_ctx_flag                EXTENDED: New flag 'no-auto-check-trustdb'.
 GPGME_DECRYPT_ARCHIVE                      NEW.
 GPGME_ENCRYPT_ARCHIVE                      NEW.
 GPGME_SIG_MODE_ARCHIVE                     NEW.
 GPGME_VERIFY_ARCHIVE                       NEW.
 gpgme_verify_flags_t                       NEW.
 gpgme_op_verify_ext_start                  NEW.
 gpgme_op_verify_ext                        NEW.
 cpp: GpgGenCardKeyInteractor::Curve        NEW.
 cpp: GpgGenCardKeyInteractor::setCurve     NEW.
 cpp: Context::WantAddress                  NEW.
 cpp: Context::DecryptArchive               NEW.
 cpp: Data::setFileName            EXTENDED: New overload
 qt: ListAllKeysJob::Option                 NEW.
 qt: ListAllKeysJob::Options                NEW.
 qt: ListAllKeysJob::setOptions             NEW.
 qt: ListAllKeysJob::options                NEW.
 qt: Job::startNow                          NEW.
 qt: ImportJob::startLater                  NEW.
 qt: FileListDataProvider                   NEW.
 qt: EncryptArchiveJob                      NEW.
 qt: SignArchiveJob                         NEW.
 qt: SignEncryptArchiveJob                  NEW.
 qt: Protocol::encryptArchiveJob            NEW.
 qt: Protocol::signArchiveJob               NEW.
 qt: Protocol::signEncryptArchiveJob        NEW.

 Release-info: https://dev.gnupg.org/T6341


Noteworthy changes in version 1.18.0 (2022-08-10)